kubernetes/doc-home-cluster/apps/selfhosted/open-webui/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: open-webui
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: open-webui
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ollama
      toPorts:
        - ports:
            - port: "11434"
              protocol: TCP

    # Authentik
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/instance: nginx-external
            io.kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP

    # Tika
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: tika
      toPorts:
        - ports:
            - port: "9998"
              protocol: TCP

    # Pipelines
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: open-webui-pipelines
      toPorts:
        - ports:
            - port: "9099"
              protocol: TCP

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: n8n
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
